Fix: Configure Socket.IO and API paths for Kubernetes base path

--- a/public/index.html
+++ b/public/index.html
@@ -1641,7 +1641,7 @@
     <!-- Socket.IO CDN for better WSL compatibility - fallback to local if CDN fails -->
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js" 
             crossorigin="anonymous"
-            onerror="this.onerror=null; this.src='/socket.io/socket.io.js';">
+            onerror="this.onerror=null; this.src='socket.io/socket.io.js';">
     </script>
     <!-- Modular ES6 Structure -->
 <script type="module" src="js/main.js"></script>
