fix: bug stopping game flow

--- a/public/index.html
+++ b/public/index.html
@@ -766,7 +766,7 @@
                         </div>
                         <div class="advanced-options">
                             <label class="manual-advancement-option" style="border: 2px solid #4299e1; border-radius: 8px; padding: 8px; background: rgba(66, 153, 225, 0.1);">
-                                <input type="checkbox" id="manual-advancement" checked data-translate-title="manual_advancement_tooltip"> <strong>🎮 <span data-translate="manual_advancement">Manual question advancement (host control)</span></strong>
+                                <input type="checkbox" id="manual-advancement" data-translate-title="manual_advancement_tooltip"> <strong>🎮 <span data-translate="manual_advancement">Manual question advancement (host control)</span></strong>
                             </label>
                             <label class="power-ups-option" style="border: 2px solid #8b5cf6; border-radius: 8px; padding: 8px; background: rgba(139, 92, 246, 0.1); margin-top: 8px;">
                                 <input type="checkbox" id="enable-power-ups" data-translate-title="enable_power_ups_tooltip"> <strong>⚡ <span data-translate="enable_power_ups">Enable Power-Ups (50-50, +10s, 2x Points)</span></strong>
