--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,13 @@
     <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
 
     <!-- Preload critical CSS -->
-    <link rel="preload" href="css/main.bundle.css?v=12" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="css/main.bundle.css?v=12"></noscript>
+    <link rel="preload" href="css/main.bundle.css?v=14" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="css/main.bundle.css?v=14"></noscript>
     
     <!-- Preload critical JavaScript -->
-    <link rel="preload" href="js/main.js?v=12" as="script" crossorigin="anonymous">
-    <link rel="preload" href="js/core/app.js?v=12" as="script" crossorigin="anonymous">
-    <link rel="preload" href="js/utils/translation-manager.js?v=12" as="script" crossorigin="anonymous">
+    <link rel="preload" href="js/main.js?v=14" as="script" crossorigin="anonymous">
+    <link rel="preload" href="js/core/app.js?v=14" as="script" crossorigin="anonymous">
+    <link rel="preload" href="js/utils/translation-manager.js?v=14" as="script" crossorigin="anonymous">
     
     <!-- Optimized font loading for mobile performance -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -733,6 +733,11 @@
                     <button id="host-btn-mobile" class="btn primary large-action-btn" data-translate="host_game">Host a Game</button>
                     <button id="join-btn-mobile" class="btn secondary large-action-btn" data-translate="join_game">Join Game</button>
                 </div>
+            </div>
+
+            <!-- App Version Display -->
+            <div class="app-version" id="app-version">
+                <span id="app-version-text">Loading version...</span>
             </div>
         </div>
 
@@ -1887,7 +1892,7 @@
             onerror="this.onerror=null; this.src='socket.io/socket.io.js';">
     </script>
     <!-- Modular ES6 Structure -->
-<script type="module" src="js/main.js?v=12"></script>
+<script type="module" src="js/main.js?v=14"></script>
     <!-- Service Worker Registration for Static Asset Caching -->
     <script>
         if ('serviceWorker' in navigator) {
@@ -1895,6 +1900,22 @@
                 // Use base path for Kubernetes/cloud deployments
                 const basePath = document.querySelector('base')?.getAttribute('href') || '/';
                 const swPath = basePath + 'sw.js';
+
+                // Fetch and display app version
+                fetch(swPath)
+                    .then(response => response.text())
+                    .then(swContent => {
+                        const versionMatch = swContent.match(/CACHE_VERSION = '([^']+)'/);
+                        if (versionMatch) {
+                            const version = versionMatch[1];
+                            const versionText = document.getElementById('app-version-text');
+                            if (versionText) {
+                                versionText.textContent = version;
+                            }
+                        }
+                    })
+                    .catch(err => console.warn('[App] Could not fetch version:', err));
+
                 // updateViaCache: 'none' forces the browser to always check the network for sw.js updates
                 // This bypasses HTTP cache and ensures new deployments are detected immediately
                 navigator.serviceWorker.register(swPath, { scope: basePath, updateViaCache: 'none' })
